--- a/TrainZzz/Info.plist
+++ b/TrainZzz/Info.plist
@@ -2,9 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>location</string>
-	</array>
+    <!-- Required location usage descriptions -->
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>We use your location to trigger an alarm.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>We use your location in the background to trigger an alarm.</string>
+
+    <!-- Enable location updates in background -->
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>location</string>
+    </array>
 </dict>
 </plist>
