--- a/TrainZzz/Info.plist
+++ b/TrainZzz/Info.plist
@@ -2,7 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIBackgroundModes</key>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This is used by the app to enable location-based functions.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This is used by the app to enable location-based functions.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This is used by the app to enable location-based functions.</string>
+	
+    <key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
 		<string>processing</string>
